# My-First-Quake-Mod

./: .gitignore  SConstruct  flake.nix  pyproject.toml  unnamed.map
autosave/: unnamed.1.map
src/: SConscript
src/maps/: unnamed.map  uraya_start.map
